# clerkk

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  Dockerfile.local  README.md  alembic.ini  pyproject.toml
backend/alembic/: Dockerfile  entrypoint.sh  env.py
backend/alembic/versions/: 0dcf7a2e3895_add_accounts_and_keep_debts.py  28753cbdfb68_add_exchange_rate_cache_table.py  ec9c4e39ee48_initial_schema.py
backend/clerkk_backend/: main.py
backend/clerkk_backend/controllers/: __init__.py  account.py  dashboard.py  debt.py  expense.py  income.py  user.py
backend/clerkk_backend/core/: auth.py  container.py  database.py  enums.py  error_handlers.py  exceptions.py  logging.py  permissions.py
backend/clerkk_backend/core/middleware/: __init__.py  auth.py  request_id.py
backend/clerkk_backend/handlers/: campaign_event_handler.py  payment_webhook_handler.py
backend/clerkk_backend/models/: __init__.py  account.py  debt.py  exchange_rate.py  expense.py  expense_history.py  income_event.py  income_source.py  user.py  user_income.py
backend/clerkk_backend/schemas/: account.py  dashboard.py  debt.py  expense.py  income.py  user.py
backend/clerkk_backend/services/: account_service.py  currency_service.py  dashboard_service.py  debt_service.py  expense_service.py  income_service.py  user_service.py
backend/clerkk_backend/utils/: currency_converter.py  income_percentile.py  tax_calculator.py
backend/config/: dev.yaml  prod.yaml
backend/tests/: __init__.py  conftest.py
clerkk/: .prettierignore  (+5 more)
(+52 files in other folders)
