[tool.poetry]
name = "clerkk-backend"
version = "0.1.0"
description = "Clerkk Backend API"
authors = ["Clerkk Team"]
readme = "README.md"
packages = [{include = "clerkk_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.135.1"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
sqlalchemy = "^2.0.48"
psycopg2-binary = "^2.9.11"
pydantic = "^2.12.5"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
python-multipart = "^0.0.22"
pyyaml = "^6.0.3"
dependency-injector = "^4.48.3"
boto3 = "^1.42.59"
mangum = "^0.21.0"
pyjwt = "^2.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^26.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''
